# iel

./: .clangd  .gitignore  CMakeLists.txt  api.txt  prbuf.md  prbuf.txt
cmake/: feat.h.in
dev/: minheap_test.c  que.c  tagptr.c
dev/be/: iou.c
include/iel/: arg.h  backends.h  config.h  errno.h  init.h  minheap.h  platform.h  que.h  quedecl.h  tagptr.h
include/iel/backends/: iou.h
include/iel_priv/: alloc.h  bitmap.h  platform.h  pp.h  que.tpl.h  quep.h  tp_tagh.tpl.h
src/: alloc.c  errno.c  init.c  minheap.c  que.c  quep.c  tagptr.c
src/backends/: iou.c
